--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
     <include src="./partials/infrastructure.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/get-in-touch.html"></include>
-    <!-- <include src="./partials/footer.html"></include> -->
+    <include src="./partials/footer.html"></include>
+    <script src="./js/header-modal.js"></script>
+    <script src="./js/modal.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstra
         p.bundle.min.js"
